// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCodeMetrics should return the right metrics for apps 1`] = `
[
  "alert_status",
  "ncloc",
  "security_issues",
  "reliability_issues",
  "maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "coverage",
  "duplicated_lines_density",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_reliability_rating",
  "new_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating",
  "security_rating",
  "reliability_rating",
  "sqale_rating",
  "security_review_rating",
  "ncloc",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios 2`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_reliability_rating",
  "new_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating",
  "security_rating",
  "reliability_rating",
  "sqale_rating",
  "security_review_rating",
  "ncloc",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios 3`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_reliability_rating",
  "new_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios 4`] = `
[
  "releasability_rating",
  "security_rating",
  "reliability_rating",
  "sqale_rating",
  "security_review_rating",
  "ncloc",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for projects 1`] = `
[
  "ncloc",
  "security_issues",
  "reliability_issues",
  "maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "coverage",
  "duplicated_lines_density",
]
`;

exports[`getCodeMetrics should return the right metrics for projects 2`] = `
[
  "new_lines",
  "security_issues",
  "reliability_issues",
  "maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "new_coverage",
  "new_duplicated_lines_density",
]
`;
